增加底部tabBar，空页面"calendar"

--- a/src/miniprogram/pages/index/index.wxml
+++ b/src/miniprogram/pages/index/index.wxml
@@ -1,51 +1,75 @@
-<!--index.wxml-->
-<view class="container">
-
-  <!-- 用户 openid -->
-  <view class="userinfo">
-    <button 
-      open-type="getUserInfo" 
-      bindgetuserinfo="onGetUserInfo"
-      class="userinfo-avatar"
-      style="background-image: url({{avatarUrl}})"
-    ></button>
-    <view>
-      <button class="userinfo-nickname" bindtap="onGetOpenid">点击获取 openid</button>
-    </view>
+<!--miniprogram/pages/ui.wxml-->
+<view class="a">
+  <input class="c" type="text" placeholder="代办"></input>
+  <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
   </view>
-
-
-  <!-- 上传图片 -->
-  <view class="uploader">
-    <view class="uploader-text" bindtap="doUpload">
-      <text>上传图片</text>
-    </view>
-    <view class="uploader-container" wx:if="{{imgUrl}}">
-      <image class="uploader-image" src="{{imgUrl}}" mode="aspectFit" bindtap="previewImg"></image>
-    </view>
+  <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
   </view>
-
-
-  <!-- 操作数据库 -->
-  <view class="uploader">
-    <navigator url="../databaseGuide/databaseGuide" open-type="navigate" class="uploader-text">
-      <text>前端操作数据库</text>
-    </navigator>
+  <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
   </view>
-
-  <!-- 新建云函数 -->
-  <view class="uploader">
-    <navigator url="../addFunction/addFunction" open-type="navigate" class="uploader-text">
-      <text>快速新建云函数</text>
-    </navigator>
+  <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
   </view>
-
-  <!-- 云调用 -->
-  <view class="uploader">
-    <navigator url="../openapi/openapi" open-type="navigate" class="uploader-text">
-      <text>云调用</text>
-    </navigator>
+  <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
   </view>
+  <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
+  </view>
+  
+  <view class="a2">
+  <input class="c" type="text" placeholder="已完成"></input>
+   <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
+  </view>
+   <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
+  </view>
+   <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
+  </view>
+   <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
+  </view>
+   <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
+  </view>
+   <view class="a1">
+  <button class="b1"></button>
+  <input  class="t1" type="text"></input>
+  <input  class="date" type="text"></input>
+  </view>
+  </view>
+  <view></view>
 
-
+  <view class="a3"  style="position:fixed; bottom:1px;width: 320px;">
+  <input class="t2" type="text" placeholder="准备做什么？"></input>
+  <button class="b2"></button>
+  </view>
 </view>
+
