--- a/src/miniprogram/pages/index/index.wxml
+++ b/src/miniprogram/pages/index/index.wxml
@@ -1,75 +1,75 @@
 <!--miniprogram/pages/ui.wxml-->
-<view class="a">
-  <input class="c" type="text" placeholder="待办"></input>
-  <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
+  <view class="c"><text>待办</text></view>
+  <view class="a">
+    <view class="a1">
+      <button class="b1" style="background-image:url(images/button1.png);"></button>
+      <view class="t1"><text></text></view>
+      <view class="date"><text></text></view>
+    </view>
+    <view class="a1">
+      <button class="b1" style="background-image:url(images/button1.png);"></button>
+      <view class="t1"><text></text></view>
+      <view class="date"><text></text></view>
+    </view>
+    <view class="a1">
+      <button class="b1"style="background-image:url(images/button1.png);"></button>
+      <view class="t1"><text></text></view>
+      <view class="date"><text></text></view>
+    </view>
+    <view class="a1">
+      <button class="b1" style="background-image:url(images/button1.png);"></button>
+      <view class="t1"><text></text></view>
+      <view class="date"><text></text></view>
+    </view>
+    <view class="a1">
+      <button class="b1" style="background-image:url(images/button1.png);"></button>
+      <view class="t1"><text></text></view>
+      <view class="date"><text></text></view>
+    </view>
+    <view class="a1">
+    <button class="b1" style="background-image:url(images/button1.png);"></button>
+      <view class="t1"><text></text></view>
+      <view class="date"><text></text></view>
+    </view>
   </view>
-  <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
-  </view>
-  <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
-  </view>
-  <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
-  </view>
-  <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
-  </view>
-  <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
-  </view>
-  
-  <view class="a2">
-  <input class="c" type="text" placeholder="已完成"></input>
+
+
+  <view class="c"><text>已完成</text></view>
+  <view class="done">
    <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
-  </view>
-   <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
+   <button class="b1" style="background-image:url(images/button2.png);"></button>
+   <view class="t1"><text></text></view>
+   <view class="date"><text></text></view>
   </view>
    <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
+   <button class="b1" style="background-image:url(images/button2.png);"></button>
+   <view class="t1"><text></text></view>
+   <view class="date"><text></text></view>
   </view>
    <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
+   <button class="b1" style="background-image:url(images/button2.png);"></button>
+   <view class="t1"><text></text></view>
+   <view class="date"><text></text></view>
   </view>
    <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
+   <button class="b1" style="background-image:url(images/button2.png);"></button>
+   <view class="t1"><text></text></view>
+   <view class="date"><text></text></view>
   </view>
    <view class="a1">
-  <button class="b1"></button>
-  <input  class="t1" type="text"></input>
-  <input  class="date" type="text"></input>
+   <button class="b1" style="background-image:url(images/button2.png);"></button>
+   <view class="t1"><text></text></view>
+   <view class="date"><text></text></view>
+  </view>
+   <view class="a1">
+   <button class="b1" style="background-image:url(images/button2.png);"></button>
+   <view class="t1"><text></text></view>
+   <view class="date"><text></text></view>
   </view>
   </view>
-  <view></view>
 
   <view class="a3"  style="position:fixed; bottom:0px;">
   <input class="t2" type="text" placeholder="准备做什么？"></input>
-  <button class="b2"></button>
+  <button class="b2" style="background-image:url(images/button3.png);"></button>
   </view>
-</view>
 
