--- a/src/miniprogram/pages/index/index.wxss
+++ b/src/miniprogram/pages/index/index.wxss
@@ -1,61 +1,98 @@
 /* miniprogram/pages/ui.wxss */
-/*全局view*/
-.a{
-  width:100%;
-  text-align:center;
-}
 
 /*一行view*/
 .a1{
-  width: 100%;
   text-align: left;
-  border: solid gray;
+  border-bottom: solid gray 1px;
   display:flex;
   margin-left: 8px;
+  height: 30px;
+  margin-bottom: 10px;
+  padding-right: 5px;
 }
 
 /*待办事项部分的文本框及按钮*/
-.b1 {
-  width: 20px;
-  height:20px;
-  border-right: 1px solid gray;
+.a{
+  width:100%;
+  margin-bottom: 20px;
+}
 
+.b1 {
+  width:20px;
+  height: 20px;
+  background-size: 20px 20px;
+  background-repeat:no-repeat;
+  border:none;
 }
 
 .t1{
   width: 230px;
-  height:20px;
-  border: solid royalblue;
+  height:30px;
+  border: solid royalblue 1px;
+  color: black;
 }
 
 .date{
   width: 80px;
   text-align: right;
-  border: solid aliceblue;
+  border: solid red 1px;
+  height:30px;
 }
 
 /*文本*/
 .c{
-  background-color:#E0FFFF;
+  background-color:#BFEFFF;
+  display: flex;
+  font-size: 13px;
+  padding:5px;
 }
 
 /*底部文本框及按钮*/
 .a3{
-  background-color:#aaa;
+  background: aliceblue;
   display:flex;
   height:30px;
   width:100%;
-  border: solid;
+  border-top: gray 1px;
+  padding-top: 5px;
 }
 .b2{
-  border:solid;
   height:30px;
-  width:10%;
-  background: aliceblue;
+  width:30px;
+  background-size: 20px 20px;
+  background-repeat:no-repeat;
+  border:none;
 }
 .t2{
+  padding-left: 20px;
   width:90%;
   height:30px;
   background: aliceblue;
-  border:solid;
+  font-size: 15px;
+}
+
+/*已完成部分*/
+.t3{
+  width: 230px;
+  height:30px;
+  color: gray;
+}
+.done .date{
+  width: 80px;
+  text-align: right;
+  border: solid gray 1px;
+  height:30px;
+  color:#DBDBDB;
+}
+.done .t1{
+  width: 230px;
+  height:30px;
+  border: solid gray 1px;
+  color:#DBDBDB;
+}
+.done .b1 {
+  border-right: 2px solid gray;
+  background-size: 20px 20px;
+  background-repeat:no-repeat;
+  border:none;
 }
