--- a/src/miniprogram/pages/calendar/calendar.wxss
+++ b/src/miniprogram/pages/calendar/calendar.wxss
@@ -105,9 +105,9 @@
     margin-top: 13rpx;
 }
 
-
+/* 
 /* 不知道写的什么 */
-.mask {
+/* .mask {
     position: fixed;
     top: 0;
     left: 0;
@@ -115,9 +115,9 @@
     bottom: 0;
     background: rgba(0, 0, 0, .5);
     z-index: 1100;
-}
+} */
 
-.modal {
+/* .modal {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -127,12 +127,12 @@
     margin-top: -200rpx;
     background-color: #FFF;
     /* 圆角边框半径  */
-    border-radius: 10rpx;
+    /* border-radius: 10rpx;
     /* 设置元素的堆叠顺序：高的在前 */
-    z-index: 1200;
+    /* z-index: 1200;
     color: #555;
-}
-.modal .content {
+}  */ 
+/* .modal .content {
     overflow: hidden;
     padding: 40rpx;
     font-size: 38rpx;
@@ -152,8 +152,8 @@
     border-radius: 0 0 10rpx 10rpx;
     overflow: hidden;
     background: #f9f9f9;
-}
-.modal .footer .btn {
+} */
+/* .modal .footer .btn {
     height: 100rpx;
     width: 100%;
     display: inline-flex;
@@ -165,7 +165,7 @@
 }
 .modal .footer .btn:active {
     background-color: #DDD;
-}
+} */ 
 
 /* .modal .level {
     display: flex;
@@ -179,13 +179,13 @@
  */
 
 /*action sheet*/
-.actionItem  {
+/* .actionItem  {
     color: #555;
     font-size: 36rpx;
 }
 .actionItem.cancel {
     color: #888
-}
+} */ 
 
 
 /*update panel style*/
