--- a/src/miniprogram/pages/index/index.wxss
+++ b/src/miniprogram/pages/index/index.wxss
@@ -5,10 +5,10 @@
   text-align: left;
   border-bottom: solid gray 1px;
   display:flex;
-  margin-left: 8px;
+  margin:10px 8px;
   height: 30px;
-  margin-bottom: 10px;
-  padding-right: 5px;
+  padding-right: 15px;
+  
 }
 
 /*待办事项部分的文本框及按钮*/
@@ -28,15 +28,16 @@
 .t1{
   width: 230px;
   height:30px;
-  border: solid royalblue 1px;
   color: black;
+  font-size: 17px;
 }
 
 .date{
   width: 80px;
   text-align: right;
-  border: solid red 1px;
   height:30px;
+  font-weight: normal;
+  font-size: 15px;
 }
 
 /*文本*/
@@ -80,14 +81,12 @@
 .done .date{
   width: 80px;
   text-align: right;
-  border: solid gray 1px;
   height:30px;
   color:#DBDBDB;
 }
 .done .t1{
   width: 230px;
   height:30px;
-  border: solid gray 1px;
   color:#DBDBDB;
 }
 .done .b1 {
